Revision history for Perl module CBOR::Free

0.12
- Fix bug in parsing arguments to encode().
- Create CBOR::Free::Decoder class, which allows configurable parsing
  of tagged values.
- Refactor C code to be more modular and maintainable.

0.11 20 Jun 2019
- BREAKING CHANGE: $CBOR::Free::true and $CBOR::Free::false no longer exist.
- Lighten memory usage significantly by deferring load of Types::Serialiser
  until it’s needed.
- Tweak documentation a bit for accuracy.

0.10 14 Jun 2019
- Fix test & number stringification on 32-bit Perls (broken in 0.09).

0.09 14 Jun 2019
- Further optimizations.
- Test fixes (obscure MSWin32?)
- Always encode Inf, -Inf, and NaN to half-precision.
- Fix off-by-one in error message when trying to decode -(~0).

0.08 10 May 2019
- Further decoding speed-ups.

0.07 9 May 2019
- Dramatic speed-up in both encode and decode.
- Decode now accepts only integers or strings as map keys.

0.06 3 May 2019
- Relax Test::More version requirement a bit.
- Add a few more tests.
- Remove a stray script and some unused debugging logic.

0.05 2 May 2019
- POD touch-ups.
- Remove heap allocation logic to avoid potential memory leaks.

0.04 28 Apr 2019
- Make decoder reject true, false, null, and undefined as map keys.

0.03 28 Apr 2019
- Fix segfault when true/false are encoded as CBOR map keys.
- Reject negatives that exceed what a 64-bit signed integer can store.
- Accommodate 32-bit perls as best as can happen.

0.02 27 Apr 2019
- Fix older Perls that don’t define true/false booleans in C.
- Use memcmp rather than bcmp.

0.01 27 Apr 2019
- Initial release